--- a/tensorflow_serving/model_servers/BUILD
+++ b/tensorflow_serving/model_servers/BUILD
@@ -15,7 +15,6 @@ licenses(["notice"])  # Apache 2.0
 # or other implementation details.
 package_group(name = "tensorflow_model_server_custom_op_clients")
 
-
 filegroup(
     name = "all_files",
     srcs = glob(
@@ -344,7 +343,6 @@ cc_library(
         ":tensorflow_model_server_custom_op_clients",
         "//tensorflow_serving:internal",
     ],
-    linkopts = ["-rdynamic"],
     deps = [
         ":server_lib",
         "@org_tensorflow//tensorflow/c:c_api",
@@ -358,9 +356,7 @@ cc_library(
 cc_binary(
     name = "tensorflow_model_server",
     stamp = 1,
-    visibility = [
-        "//tensorflow_serving:internal",
-    ],
+    visibility = ["//tensorflow_serving:internal"],
     deps = [
         ":tensorflow_model_server_main_lib",
     ],
